# 2fa

./: .gitignore  2fa.pro  2fa_de.ts  AddDialog.cpp  AddDialog.h  AddressWidget.cpp  AddressWidget.h  Auth.cpp  Auth.h  CMakeLists.txt  MainWindow.cpp  MainWindow.h  Presets.h  README.md  ServiceItem.h  Storage.cpp  Storage.h  TableModel.cpp  TableModel.h  main.cpp
CMakeModules/: MacOSXBundleInfo.plist.in
include/libcppotp/: otp.cpp
resources/: 2fa_de.qm  AppIconLock.icns  resources.qrc
